--- a/Список компонентов.md
+++ b/Список компонентов.md
@@ -31,3 +31,5 @@ https://ru.aliexpress.com/item/16pcsFree-shipping-Potentiometer-knob-switch-cap-
 
 [Бананакрокодилы](
 https://ru.aliexpress.com/item/4mm-Injection-Banana-Plug-To-Shrouded-Copper-Electrical-Clamp-Alligator-Clip-Test-Cable-Leads-1M-For/32609356447.html?ws_ab_test=searchweb0_0%25252Csearchweb201602_3_10065_10068_433_434_10136_10137_10138_10060_10062_10056_10055_10054_302_10059_10099_10103_10102_10096_10052_10053_10050_10107_10051_10106_10084_10117_10083_10119_10080_10082_10081_10110_10111_10112_10113_10114_10078_10079_10073_10070_10122_10123_10120_10126_6000000_10127_10124_10125-10050_10112_10120%25252Csearchweb201603_1%25252Cafswitch_1_afChannel%25252CppcSwitch_5%25252Csingle_sort_0_total_tranpro_desc&btsid=4c74457f-ac50-4762-958b-897dec7008f3&algo_expid=9a1ef794-4706-4b00-870e-bae1e015ea66-1&algo_pvid=9a1ef794-4706-4b00-870e-bae1e015ea66&aff_platform=aaf&af=56737&cv=8423533&cn=43pbqmzldbey0crlz1y31lzjoxgnoi09&dp=v5_43pbqmzldbey0crlz1y31lzjoxgnoi09&mall_affr=pr1&aff_platform=default&cpt=1531373025401&sk=w7g3xag&aff_trace_key=13a6f909273043a5ba783a561c3c2f10-1531373025401-03428-w7g3xag&terminal_id=96af4ea468564c59a489d822f9943942)
+
+[Другой разъем питания с кнопкой](https://ru.aliexpress.com/item/Panel-IEC320-C14-Inlet-Power-Socket-On-Off-SPST-Red-Rocker-Switch-AC-250V-10A/32652985391.html?spm=2114.13010608.0.0.IRBfw9&dp=8bda603244b9ca0eb1bc4bbafa6f1de9&af=341378&cv=47843&afref=https%253A%252F%252Fwww.youtube.com%252F&mall_affr=pr3&aff_platform=aaf&cpt=1531400176671&sk=VnYZvQVf&aff_trace_key=9e2797738ba44de982413ecad3d92530-1531400176671-08316-VnYZvQVf&terminal_id=96af4ea468564c59a489d822f9943942)
