--- a/Список компонентов.md
+++ b/Список компонентов.md
@@ -2,6 +2,9 @@
 ---
 [USB зарядник](https://ru.aliexpress.com/item/1Pcs-5V-USB-Output-Converter-DC-7V-24V-To-5V-3A-Step-Down-Buck-KIS3R33S-Module/32648793015.html?ws_ab_test=searchweb0_0%252Csearchweb201602_3_10065_10068_433_434_10136_10137_10138_10060_10062_10056_10055_10054_302_10059_10099_10103_10102_10096_10052_10053_10050_10107_10051_10106_10084_10117_10083_10119_10080_10082_10081_10110_10111_10112_10113_10114_10078_10079_10073_10070_10122_10123_10120_10126_6000000_10127_10124_10125-10051_10112_10120%252Csearchweb201603_1%252Cafswitch_1_afChannel%252CppcSwitch_5%252Csingle_sort_0_total_tranpro_desc&btsid=753fd826-333b-4b8d-9563-3a3a3de1b835&algo_expid=1157f8ea-e120-40f6-bcbb-e31e922dc687-2&algo_pvid=1157f8ea-e120-40f6-bcbb-e31e922dc687&af=56737&cv=8423533&cn=41pbql25oboex2wgw8td4oh700y54shc&dp=v5_41pbql25oboex2wgw8td4oh700y54shc&mall_affr=pr1&aff_platform=default&cpt=1531370526503&sk=w7g3xag&aff_trace_key=4992027cffb34374b0f1f983617565c4-1531370526503-04899-w7g3xag&terminal_id=96af4ea468564c59a489d822f9943942)
 
+## Вариант дисплей + управление + понижайка
+[RD DPS5005](https://ru.aliexpress.com/store/product/RD-DPS5005-Constant-Voltage-current-Step-down-Programmable-Power-Supply-module-buck-Voltage-converter-color-LCD/923042_32684324154.html?spm=a2g0v.12010608.0.0.5fd9da47qtn0tb&dp=95433ab7460e416e151bf10349e39e20&af=341378&cv=47843&afref=https%253A%252F%252Fwww.youtube.com%252F&mall_affr=pr3&aff_platform=aaf&cpt=1531456291819&sk=VnYZvQVf&aff_trace_key=61e2ac1844f0446e927f1d8fa399ef51-1531456291819-08351-VnYZvQVf&terminal_id=96af4ea468564c59a489d822f9943942)
+
 [Банана клеммы на выход](
 https://ru.aliexpress.com/item/Top-Selling-High-Qualtiy-Couple-Terminals-Red-Black-Connector-Amplifier-Terminal-Binding-Post-Banana-Speaker-Plug/32721475121.html?ws_ab_test=searchweb0_0%252Csearchweb201602_3_10065_10068_433_434_10136_10137_10138_10060_10062_10056_10055_10054_302_10059_10099_10103_10102_10096_10052_10053_10050_10107_10051_10106_10084_10117_10083_10119_10080_10082_10081_10110_10111_10112_10113_10114_10078_10079_10073_10070_10122_10123_10120_10126_6000000_10127_10124_10125-6000000_10119_302%252Csearchweb201603_1%252Cafswitch_1_afChannel%252CppcSwitch_5%252Csingle_sort_0_total_tranpro_desc&btsid=e5d44f0c-0903-4786-9cb6-d381df10aff8&algo_expid=c41498b4-fe58-4c08-ac3d-91f1bd9c7475-0&algo_pvid=c41498b4-fe58-4c08-ac3d-91f1bd9c7475&af=56737&cv=8423533&cn=43pbqlc36psi84o79cw49w9k0i4k78my&dp=v5_43pbqlc36psi84o79cw49w9k0i4k78my&mall_affr=pr1&aff_platform=default&cpt=1531370883933&sk=w7g3xag&aff_trace_key=b0d8d1f57dd6473190e4396dcf009b4c-1531370883933-04870-w7g3xag&terminal_id=96af4ea468564c59a489d822f9943942)
 
